--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,4 @@ jobs:
       - run: npm install --no-optional --no-audit --no-fund --progress=false
       - run: npm run lint
       - run: npm run test
+      - run: npm run report:package
