--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "wagtail"
   ],
   "devDependencies": {
-    "eslint": "7.13.0",
-    "jest": "26.6.3",
-    "prettier": "2.1.2"
+    "eslint": "^8.6.0",
+    "jest": "^27.4.7",
+    "prettier": "^2.5.1"
   },
   "scripts": {
     "prepare": "./.githooks/deploy.sh",
