--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,19 @@
 name: CI
 on:
   push:
+    branches:
+      - main
+      - renovate/*
   pull_request:
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - id: nvm
-        run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v2
         with:
-          node-version: "${{ steps.nvm.outputs.NVMRC }}"
-      - run: npm install --no-optional --no-audit --no-fund --progress=false
+          node-version-file: .nvmrc
+      - run: npm ci
       - run: npm run lint
       - run: npm run test
       - run: npm run report:package
