--- a/renovate.json5
+++ b/renovate.json5
@@ -26,6 +26,7 @@
   node: {
     major: {
       enabled: true,
+      automerge: true,
     },
     // https://renovatebot.com/docs/node/#configuring-support-policy
     supportPolicy: ["current"],
